5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1800_2568.log
== TEST (2019-06-11 10:39:43) 
-- CODE:
n = int(input("n: "))
i = 0
v = ""
while n > i:
	v = (n * 2) * "*"
	print(v)
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:40:20) 
-- CODE:
n = int(input("n: "))
i = 0
v = ""
while n > i:
	v = (n * 2) * "*"
print(v)
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:41:20) 
-- CODE:
n = int(input("n: "))
i = 0
v = ""
while i <= n:
	v = (n * 2) * "*"
print(v)
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:41:28) 
-- CODE:
n = int(input("n: "))
i = 0
v = ""
while i <= n:
	v = (n * 2) * "*"
	print(v)
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:43:00) 
-- CODE:
n = int(input("n: "))
i = n
v = ""
while i > 0
	v = (n * 2) * "*" + i
	i = i + 0
	print(v)
-- ERROR:
File "XXXX", line 4
    while i > 0
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:43:06) 
-- CODE:
n = int(input("n: "))
i = n
v = ""
while i > 0:>
	v = (n * 2) * "*" + i
	i = i + 0
	print(v)
-- ERROR:
File "XXXX", line 4
    while i > 0:>
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:43:13) 
-- CODE:
n = int(input("n: "))
i = n
v = ""
while i > 0:
	v = (n * 2) * "*" + i
	i = i + 0
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = (n * 2) * "*" + i
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:47:05) 
-- CODE:
n = int(input("n: "))

v = (n * 2) * "*" 
 
print(v)
-- OUTPUT:
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:59:46) 
-- CODE:
n = int(input("n: "))

for in a range(x):
	print((x-i)*"*" (* 2))
	
 

-- ERROR:
File "XXXX", line 3
    for in a range(x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:59:59) 
-- CODE:
n = int(input("n: "))

for i in range(x):
	print((x-i)*"*" (* 2))
	
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:00:07) 
-- CODE:
x = int(input("n: "))

for i in range(x):
	print((x-i)*"*" (* 2))
	
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((x-i)*"*" (* 2))
TypeError: str object argument after * must be an iterable, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:00:11) 
-- CODE:
x = int(input("n: "))

for i in range(x):
	print((x-i)*"*" (* 2))
	
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((x-i)*"*" (* 2))
TypeError: str object argument after * must be an iterable, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:01:31) 
-- CODE:
x = int(input("n: "))

for i in range(x):
	print((x-i)*"*" * 2)
	
 

-- OUTPUT:
**********************
********************
******************
****************
**************
************
**********
********
******
****
**
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:45) 
-- CODE:
x = int(input("n: "))

for i in range(x):
	print((x-i)*"*" + 2*i*"o"+(x-i)*"*")
	
 

-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:54) 
-- CODE:
x = int(input("n: "))

for i in range(x):
	print((x-i)*"*" + 2*i*"o"+(x-i)*"*")
	
 

-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:03:11) 
-- CODE:
x = int(input("n: "))

for i in range(x):
	print((x-i)*"*" + 2*i*"o"+(x-i)*"*")
	
 

-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:08:29) 
-- CODE:
x = int(input("n: "))

for i in range(x):
	print((x-i)*"*" + 2*i*"o"+(x-i)*"*")
	
 

-- EXECUTION TIME:
0.667476
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
